--- a/static/chat.html
+++ b/static/chat.html
@@ -21,20 +21,17 @@
         var endpoint = document.getElementById('endpoint');
   
   
-        // socket.on('logs-added', function(msg) {
-        //     var item = document.createElement('li');
-        //     console.log(msg)
-        //     item.textContent = msg;
-        //     messages.appendChild(item);
-        //     window.scrollTo(0, document.body.scrollHeight);
-        // });
+        form.addEventListener('submit', function(e) {
+            e.preventDefault();
+            if (endpoint.value) {
+            socket.emit('create_log', endpoint.value);
+            endpoint.value = '';
+            }
+        });
 
-        // socket.on('connnection', () => {
-        //     console.log('connected to server');
-        // })
-
-        socket.on('logs_create', (newOrders) => {
-            console.log(newOrders)
+        // socket.emit('create_log', endpoint.value);
+        socket.on('log', (log) => {
+            console.log(log)
         })
 
         // socket.on('message', (message) => {
